2010-07-19  Richard Henderson  <rth@redhat.com>

	* tree-optimize.c (execute_all_early_local_passes): New.  Change
	cgraph_state here ...
	(execute_early_local_optimizations): ... not here.  Remove.
	(pass_early_local_passes, pass_all_early_optimizations): Update.

2010-07-19  Bernd Schmidt  <bernds@codesourcery.com>

	* postreload.c (reload_combine_closest_single_use): Ignore the
	number of uses for DEBUG_INSNs.
	(fixup_debug_insns): New static function.
	(reload_combine_recognize_const_pattern): Use it.  Don't let the
	main loop be affected by DEBUG_INSNs.
	Really disallow moving adds past a jump insn.
	(reload_combine_recognize_pattern): Don't update use_ruid here.
	(reload_combine_note_use): Do it here.
	(reload_combine): Use control_flow_insn_p rather than JUMP_P.

2010-07-19  Bingfeng Mei  <bmei@broadcom.com>

	* ddg.c (create_ddg): Exclude nodes of debug_insn in counting nodes
        of a loop.
        * loop-doloop.c (doloop_condition_get): Skip possible debug_insn.

2010-07-19  Iain Sandoe  <iains@gcc.gnu.org>

	* config/i386/darwin.h: Define darwin_emit_branch_islands.
	(TARGET_MACHO_BRANCH_ISLANDS): New.
	(FUNCTION_PROFILER): Use TARGET_MACHO_BRANCH_ISLANDS.
	* config/i386/i386.h (TARGET_MACHO_BRANCH_ISLANDS): Define a
	default value.
	* config/i386/i386.c (output_pic_addr_const): Do not emit
	branch islands unless TARGET_MACHO_BRANCH_ISLANDS is set.
	(x86_output_mi_thunk): Adjust symbol creation.
	* config/rs6000/darwin.h: Define darwin_emit_branch_islands.
	Remove out of date comment.
	* config/rs6000/rs6000.c (print_operand): Adjust symbol.
	DARWIN_LINKER_GENERATES_ISLANDS: Remove.
	DARWIN_GENERATE_ISLANDS: Ditto.
	(output_call):  Do not emit branch islands unless
	darwin_emit_branch_islands is set.
	* config/darwin.c: Declare darwin_emit_branch_islands.
	(machopic_indirect_data_reference): Do not emit unless
	darwin_emit_branch_islands is set.
	(darwin_override_options): Set darwin_emit_branch_islands
	where it is needed.
	* config/darwin9.h