@@ -1,3 +1,8 @@
+2010-07-19  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/44941
+	* gcc.c-torture/compile/pr44941.c: New testcase.
+
 2010-07-19  Jason Merrill  <jason@redhat.com>
 
 	PR c++/44969
